Lots of small improvements

--- a/FrontBackmatter/Acknowledgments.tex
+++ b/FrontBackmatter/Acknowledgments.tex
@@ -10,9 +10,6 @@
 %     because it produces objects of beauty.} \\ \medskip
 %     --- \defcitealias{knuth:1974}{Donald E. Knuth}\citetalias{knuth:1974} \citep{knuth:1974}
 % \end{flushright}
-
-
-
 % \bigskip
 
 \begingroup
@@ -20,6 +17,6 @@
 \let\cleardoublepage\relax
 \let\cleardoublepage\relax
 \chapter*{Acknowledgments}
-I thank my supervisor Novi and my wife Chao.
+This thesis would not have been possible without...
 
 \endgroup
