--- a/FrontBackmatter/Contents.tex
+++ b/FrontBackmatter/Contents.tex
@@ -84,6 +84,7 @@
     \acro{DP}{demographic parity}
     \acro{EOdds}{equalised odds}
     \acro{EOpp}{equality of opportunity}
+    \acro{ERM}{Empirical Risk Minimisation}
     \acro{GP}{Gaussian process}
     \acro{INN}{Invertible Neural Network}
     \acro{LR}{Logistic Regression}
@@ -94,6 +95,7 @@
     \acro{TNR}{true negative rate}
     \acro{TPR}{true positive rate}
     \acro{VAE}{variational autoencoder}
+    \acro{cVAE}{conditional VAE}
   \end{acronym}
 
   \vspace{8ex}
@@ -119,7 +121,7 @@
   %*******************************************************
   % Glossary
   %*******************************************************
-  \pdfbookmark[1]{Glossary}{nomenclature}
+  \pdfbookmark[1]{Glossary}{glossary}
   \markboth{\spacedlowsmallcaps{Glossary}}{\spacedlowsmallcaps{Glossary}}
   \begin{glossaryenv}
     \entry{sensitive attribute}{An attribute that, usually for legal or ethical reasons, should not be the basis for classification}
@@ -127,6 +129,7 @@
     \entry{fairness definition}{An aspirational (often legally inspired) specification of a fair classifier}
     \entry{fairness metric}{A metric which quantifies how well a fairness definition is satisfied}
     \entry{MNIST}{dataset of handwritten digits}
+    \entry{CelebA}{face attributes dataset with more than 200K celebrity images}
   \end{glossaryenv}
 
 
