--- a/FrontBackmatter/Declaration.tex
+++ b/FrontBackmatter/Declaration.tex
@@ -4,7 +4,8 @@
 \pdfbookmark[0]{Declaration}{declaration}
 \chapter*{Declaration}
 \thispagestyle{empty}
-Put your declaration here.
+I hereby declare that this thesis has not been and will not be, submitted in whole or in part to another University for the award of any other degree.
+Except where indicated by specific stated in the text, this thesis was composed by myself and the work contained therein in my own.
 \bigskip
 
 \noindent\textit{\myLocation, \myTime}
