--- a/allreferences.bib
+++ b/allreferences.bib
@@ -1426,13 +1426,12 @@
   month		= {7}
 }
 
-@Article{	  liu2019variance,
-  title		= {On the Variance of the Adaptive Learning Rate and Beyond},
-  author	= {Liu, Liyuan and Jiang, Haoming and He, Pengcheng and Chen,
-		  Weizhu and Liu, Xiaodong and Gao, Jianfeng and Han,
-		  Jiawei},
-  journal	= {arXiv preprint arXiv:1908.03265},
-  year		= {2019}
+@InProceedings{	  liu2019variance,
+title={On the Variance of the Adaptive Learning Rate and Beyond},
+author={Liyuan Liu and Haoming Jiang and Pengcheng He and Weizhu Chen and Xiaodong Liu and Jianfeng Gao and Jiawei Han},
+booktitle={International Conference on Learning Representations},
+year={2020},
+url={https://openreview.net/forum?id=rkgz2aEKDr}
 }
 
 @InCollection{	  LocAbbRaiBauetal19,
