--- a/main.tex
+++ b/main.tex
@@ -469,7 +469,7 @@ titlepage,numbers=noenddot,%1headlines,
 \cleardoublepage\include{FrontBackmatter/Abstract}
 % \cleardoublepage\include{FrontBackmatter/Publications}
 \cleardoublepage\include{FrontBackmatter/Declaration}
-\cleardoublepage\include{FrontBackmatter/Acknowledgments}
+% \cleardoublepage\include{FrontBackmatter/Acknowledgments}
 \cleardoublepage\include{FrontBackmatter/Contents}
 %********************************************************************
 % Mainmatter
@@ -488,7 +488,7 @@ titlepage,numbers=noenddot,%1headlines,
 % use \cleardoublepage here to avoid problems with pdfbookmark
 \cleardoublepage
 \ctparttext{
-  The first part covers the introduction, the related work and a summary of the work presented in part~\ref{pt:main}.
+  This part covers the introduction, the related work and a summary of the work presented in part~\ref{pt:main}.
 }
 \part{Preliminaries}\label{pt:intro}
 \include{ch/1-introduction}
@@ -498,7 +498,7 @@ titlepage,numbers=noenddot,%1headlines,
 
 \cleardoublepage
 \ctparttext{
-  The main part comprises two peer-reviewed publications and one submitted paper currently under review.
+  This part comprises two peer-reviewed publications and one submitted paper currently under review.
   They are reproduced here with minimal changes.
 }
 \part{Publications}\label{pt:main}
