--- a/paper2/4-experiments.tex
+++ b/paper2/4-experiments.tex
@@ -12,7 +12,7 @@ while both subnetworks of the cVAE model comprise gated convolutions~\citep{van2
 For cMNIST, we construct the Ln2L baseline according to its original description, for CelebA,
 we treat it as an augmentation of the baseline CNN's objective function.
 %More
-Detailed information regarding model architectures can be found in Appendix~\ref{sec:architectures} and~\ref{sec:optimisation-details}.%
+Detailed information regarding model architectures can be found in sections~\ref{sec:architectures} and~\ref{sec:optimisation-details}.%
 \footnote{The code can be found at \url{https://github.com/predictive-analytics-lab/nifr}.}
 % \begin{figure*}[!htb]
 %   \centering
@@ -199,9 +199,9 @@ Results shown in fig. \ref{fig:adult-chart} show that
 we match or exceed the baseline.
 %as $\eta$ moves the dataset towards a more imbalanced setting.
 In terms of fairness metrics, our approach generally outperforms the baseline models for both of $\eta$.
-Detailed results can be found in the Appendix~\ref{sec:additional-results}.
+Detailed results can be found in section~\ref{sec:additional-results}.
 
-We also did experiments to show that the encoder transfers to other tasks. These transfer-learning experiments can be found in Appendix~\ref{sec:transfer-learning}.
+We also did experiments to show that the encoder transfers to other tasks. These transfer-learning experiments can be found in section~\ref{sec:transfer-learning}.
 
 
 % \begin{figure}
