--- a/paper2/appendix.tex
+++ b/paper2/appendix.tex
@@ -186,8 +186,8 @@ both sizes 5 and 10 achieve nearly identical results.
 \begin{table}[tbp]
     \caption{
         Additional fairness metrics for the experiments on the CelebA dataset (fig.~\ref{fig:celeba-multiplot} from the main text).
-        \emph{TPR diff.} refers to the difference in true positive rate.
-        \emph{TNR diff.} refers to the difference in true negative rate.
+        \emph{TPR diff.}\ refers to the difference in true positive rate.
+        \emph{TNR diff.}\ refers to the difference in true negative rate.
         \textsc{Left:} $\eta = 0$. \textsc{Right:} $\eta=1$.
     }
     \label{tab:my_label}
