Add to literature review

--- a/allreferences.bib
+++ b/allreferences.bib
@@ -2235,3 +2235,10 @@ url={https://openreview.net/forum?id=jWkw45-9AbL}
  volume = {33},
  year = {2020}
 }
+
+@article{maity2020notradeoff,
+  title={There is no trade-off: enforcing fairness can improve accuracy},
+  author={Maity, Subha and Mukherjee, Debarghya and Yurochkin, Mikhail and Sun, Yuekai},
+  journal={arXiv preprint arXiv:2011.03173},
+  year={2020}
+}
