Extend literature review

--- a/allreferences.bib
+++ b/allreferences.bib
@@ -1591,6 +1591,8 @@ url={https://openreview.net/forum?id=rkgz2aEKDr}
   author	= {Jun Hyun Nam and Hyuntak Cha and Sungsoo Ahn and Jaeho Lee
 		  and Jinwoo Shin},
   booktitle	= {Advances in Neural Information Processing Systems},
+ pages = {20673--20684},
+ volume = {33},
   year		= {2020}
 }
 
@@ -2241,4 +2243,13 @@ url={https://openreview.net/forum?id=jWkw45-9AbL}
   author={Maity, Subha and Mukherjee, Debarghya and Yurochkin, Mikhail and Sun, Yuekai},
   journal={arXiv preprint arXiv:2011.03173},
   year={2020}
+}
+
+@inproceedings{lohaus2020too,
+  title={Too relaxed to be fair},
+  author={Lohaus, Michael and Perrot, Micha\"el and von Luxburg, Ulrike},
+  booktitle={International Conference on Machine Learning},
+  pages={6360--6369},
+  year={2020},
+  organization={PMLR}
 }
