Add one and a half additional sentences

--- a/ch/6-discussion.tex
+++ b/ch/6-discussion.tex
@@ -1,6 +1,13 @@
 \chapter{Discussion and future work}\label{ch:conclusion}
 In this thesis, I have presented three approaches for dealing with dataset bias.
-The first one deals with a form of label bias and the other two with forms of sampling bias.
+The first one deals with a form of label bias and the other two with forms of sampling bias;
+in both cases the bias is linked to a special attribute \(s\) of the data.
+%
+% mention again the main strengths of the presented methods
+%
+The first approach used knowledge of general statistics of the ``fair'' data distribution to offer a quite general method for correcting label bias,
+that is intuitive to tune.
+
 While this by no means covers \emph{all} possible biases,
 it contributes to a growing literature that tries to tackle this problem.
 One could ask if there is one method that is able to cover all possible dataset biases,
